--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "slack-pixiv-new-works-bot",
-  "description": "A Slack bot posting new works by following users.",
+  "name": "slack-pixiv-bot",
+  "description": "A Slack bot to post new works by following users.",
   "keywords": ["python", "slack", "pixiv"],
   "env": {
     "PIXIV_BOT_USERNAME": {
