Slack incoming webhookを使うように仕様変更
起動時の最新投稿をメモリに記憶しておいて、それより新しいものを次の取得時の新着投稿とするようにしてincoming
webhookのみで動くようにしてとてもシンプルになった✨

--- a/app.json
+++ b/app.json
@@ -11,8 +11,8 @@
       "description": "base64-encoded pixiv login password",
       "required": true
     },
-    "PIXIV_BOT_SLACK_API_TOKEN": {
-      "description": "slack api token",
+    "PIXIV_BOT_SLACK_INCOMING_HOOK_URL": {
+      "description": "slack incoming hook url",
       "required": true
     }
   }
